--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         const loginButton = document.getElementById('loginBtn');
         const usernameInput = document.getElementById('username');
         const passwordInput = document.getElementById('password_field');
-        const phishingMessage = "You've been phished! Redirecting to awareness module...";
+        const phishingMessage = "Oh! this is phishing site! Redirecting to awareness module...";
         const awarenessWebsite = "https://2shashank.github.io/Awareness/";
 
         loginButton.addEventListener('click', () => {
